--- a/jd-app-client/src/main/webapp/WEB-INF/pages/front/nav.jspf
+++ b/jd-app-client/src/main/webapp/WEB-INF/pages/front/nav.jspf
@@ -1,7 +1,8 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<nav class="navbar navbar-fixed-top " role="navigation">
-		<div class="row col-xs-12">
-			<div class="container">
+<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"
+%><%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="container">
+			<div class="row col-xs-12">
 				<div class="navbar-header ">
 					<button type="button" class="navbar-toggle collapsed"
 						data-toggle="collapse" data-target="#navbar" aria-expanded="false"
@@ -20,8 +21,8 @@
 					</ul>
 					<!-- end of menu -->
 					<ul class="nav navbar-nav navbar-right">
-					   <li class="${memVO == null ? '':'hide'}"><a href="<%request.getContextPath();%>/mem/login">登入</a></li>
-					   <li class="dropdown ${memVO == null ? 'hide':''}">
+					   <li class="${memSession == null ? '':'hide'}"><a href="<%=request.getContextPath()%>/member/login">登入</a></li>
+					   <li class="dropdown ${memSession == null ? 'hide':''}">
 					   	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
 								我的選單 
 							<span class="caret"></span>
@@ -30,18 +31,18 @@
 								<li role="presentation" class="dropdown-header">參加活動</li>
 								<li role="presentation"><a href="<%=request.getContextPath()%>/front/act/collecting.do?action=ord">我的個人頁面</a></li>
 								<li role="presentation"><a href="<%=request.getContextPath()%>/mem/mem.do?action=getOrdList">我的票卷</a></li>
-								<hr />
+								<hr >
 								<li role="presentation" class="dropdown-header">主辦活動</li>
 								<li role="presentation"><a href="<%=request.getContextPath()%>/mem/mem.do?action=myAct">我舉辦的活動</a></li>
 								<li role="presentation"><a href="<%=request.getContextPath()%>/front/org/org.do?action=myOrg">設定主辦單位</a></li>
 								
-								<hr />
+								<hr >
 								<li role="presentation" class="dropdown-header">帳號設定</li>
-								<li role="presentation"><a href="<%=request.getContextPath()%>/YA101G3/front/mem/mem_update.jsp">修改個人資料</a></li>
-								<hr />
-								<li role="presentation"><a href="<%=request.getContextPath()%>/YA101G3/mem/mem.do?action=logout">登出</a></li>
+								<li role="presentation"><a href="<%=request.getContextPath()%>/member/update">修改個人資料</a></li>
+								<hr >
+								<li role="presentation"><a href="<%=request.getContextPath()%>/member/logout">登出</a></li>
 							</ul></li>		
-						<li class="${memVO == null ? '':'hide'}"><a href="<%=request.getContextPath()%>/YA101G3/front/mem/mem_signin.jsp">註冊</a></li>
+						<li class="${memSession == null ? '':'hide'}"><a href="<%=request.getContextPath()%>/YA101G3/front/mem/mem_signin.jsp">註冊</a></li>
 					</ul>
 
 				</div>
